--- a/src/package.xml
+++ b/src/package.xml
@@ -1,60 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>AudioEvent</members>
-        <members>Beacon</members>
-        <members>BeaconHomeController</members>
-        <members>BeaconHomeControllerTest</members>
-        <members>ChannelException</members>
-        <members>ChatterEvent</members>
-        <members>FeedItemTriggerHandler</members>
-        <members>IAdventure</members>
-        <members>IQuest</members>
-        <members>AdventureTest</members>
-        <members>AdventureWrapper</members>
-        <members>QuestFile</members>
-        <members>QuestFromFile</members>
-        <members>QuestTest</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>BeaconHome</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>FeedCommentTrigger</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>Audio_Event__c.Channel__c</members>
-        <members>Audio_Event__c.ResourceUrl__c</members>
-        <members>Audio_Event__c.Volume_Percentage__c</members>
-        <members>GeneralSetting__c.Value__c</members>
-        <members>Adventure__c.Attempts__c</members>
-        <members>Adventure__c.Class_Name__c</members>
-        <members>Adventure__c.Completed__c</members>
-        <members>Adventure__c.Current_Quest__c</members>
-        <members>Adventure__c.In_Play__c</members>
-        <members>Adventure__c.Last_Started__c</members>
-        <members>Adventure__c.Time_Spent__c</members>
-        <members>Adventure__c.Update_Chatter__c</members>
-        <members>Quest_Post__c.Answered__c</members>
-        <members>Quest_Post__c.Class_Name__c</members>
-        <members>Quest_Post__c.Post_Id__c</members>
-        <members>Quest_Post__c.Quest_Id__c</members>
-        <members>Quest_Post__c.Started__c</members>
-        <name>CustomField</name>
-    </types>
-    <types>
-        <members>Audio_Event__c</members>
-        <members>GeneralSetting__c</members>
-        <members>Adventure__c</members>
-        <members>Quest_Post__c</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>TestQuestion1</members>
-        <name>StaticResource</name>
-    </types>
-    <version>33.0</version>
+	<types>
+		<members>AdventureFile</members>
+		<members>AdventureFromFile</members>
+		<members>AdventureTest</members>
+		<members>AdventureWrapper</members>
+		<members>AudioEvent</members>
+		<members>Beacon</members>
+		<members>BeaconHomeController</members>
+		<members>BeaconHomeControllerTest</members>
+		<members>ChannelException</members>
+		<members>ChatterEvent</members>
+		<members>FeedItemTriggerHandler</members>
+		<members>IAdventure</members>
+		<members>IQuest</members>
+		<members>QuestFile</members>
+		<members>QuestFromFile</members>
+		<members>QuestTest</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>BeaconHome</members>
+		<name>ApexPage</name>
+	</types>
+	<types>
+		<members>FeedCommentTrigger</members>
+		<name>ApexTrigger</name>
+	</types>
+	<types>
+		<members>Audio_Event__c.Channel__c</members>
+		<members>Audio_Event__c.ResourceUrl__c</members>
+		<members>Audio_Event__c.Volume_Percentage__c</members>
+		<members>GeneralSetting__c.Value__c</members>
+		<members>Adventure__c.Attempts__c</members>
+		<members>Adventure__c.Class_Name__c</members>
+		<members>Adventure__c.Completed__c</members>
+		<members>Adventure__c.Current_Quest__c</members>
+		<members>Adventure__c.In_Play__c</members>
+		<members>Adventure__c.Last_Started__c</members>
+		<members>Adventure__c.Time_Spent__c</members>
+		<members>Adventure__c.Update_Chatter__c</members>
+		<members>Quest_Post__c.Answered__c</members>
+		<members>Quest_Post__c.Class_Name__c</members>
+		<members>Quest_Post__c.Post_Id__c</members>
+		<members>Quest_Post__c.Quest_Id__c</members>
+		<members>Quest_Post__c.Started__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>Audio_Event__c</members>
+		<members>GeneralSetting__c</members>
+		<members>Adventure__c</members>
+		<members>Quest_Post__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>TestQuestion1</members>
+		<name>StaticResource</name>
+	</types>
+	<version>33.0</version>
 </Package>
