--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 npm-debug.log
 *.sublime-project
 *.sublime-workspace
+*.sublime-settings
 test/workspace/*
 results.txt
+/apex-scripts/
 
 deploy/*
 config/*
