Updates from the London World Tour effort

--- a/src/package.xml
+++ b/src/package.xml
@@ -56,9 +56,7 @@
 		<name>CustomObject</name>
 	</types>
 	<types>
-		<members>TestQuestion1</members>
-		<members>TestAdventure1</members>
-		<members>cassette</members>
+		<members>*</members>
 		<name>StaticResource</name>
 	</types>
 	<version>33.0</version>
