Updates to get it deployable

--- a/src/package.xml
+++ b/src/package.xml
@@ -32,7 +32,7 @@
 		<name>CustomTab</name>
 	</types>
 	<types>
-		<members>Wonderforce</members>
+		<members>WonderForce</members>
 		<name>CustomApplication</name>
 	</types>
 	<types>
