--- a/src/package.xml
+++ b/src/package.xml
@@ -18,6 +18,7 @@
 		<members>QuestFromFile</members>
 		<members>QuestTest</members>
 		<members>SimDataGenController</members>
+		<members>SimDataGenerator</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
